Sorting folders & files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 pilot_heatmap/dataset_australia2018aug.json
 pilot_heatmap/dataset_africaeurope2019aug.json
+Dataset/dataset_africaeurope2019aug.json
