--- a/vueheatmap/package.json
+++ b/vueheatmap/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "leaflet-heatmap": "^1.0.0",
+    "vue": "^2.6.11",
+    "vue-heatmapjs": "^1.5.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
