--- a/vueheatmap/package.json
+++ b/vueheatmap/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "leaflet": "^1.6.0",
     "leaflet-heatmap": "^1.0.0",
     "vue": "^2.6.11",
     "vue-heatmapjs": "^1.5.0-0"
